--- a/src/messenger-chat-box.component.css
+++ b/src/messenger-chat-box.component.css
@@ -65,3 +65,10 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
+
+.btn--back {
+    float: left;
+    background: none;
+    border: 1px solid #dcdcdc;
+    color: #828282;
+}
